# Misen_Web_Interface

./: isen.cfg
Framework/src/Client/: CMakeLists.txt  Client.cpp  ImageSearch.cpp  ImageSearch.h  bisen_tests.cpp  bisen_tests.h  server.cpp  server.h  util.cpp  util.h  visen_tests.cpp
Framework/src/Client/WebInterface/: CMakeLists.txt
Framework/src/Client/WebInterface/src/: server.cpp
Framework/src/Client/WebInterface/www/: index.html  script.js  style.css
Framework/src/Client/rbisen/: server.h
ImageSearch/src/: trusted.cpp
www/: index.html  script.js  style.css
